--- a/client/package.json
+++ b/client/package.json
@@ -28,10 +28,12 @@
     "react-modal": "^3.1.5",
     "react-places-autocomplete": "^5.4.3",
     "react-redux": "^5.0.6",
+    "react-router": "^2.0.1",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
     "recompose": "^0.26.0",
     "redux": "^3.7.2",
+    "redux-form": "^7.2.3",
     "redux-promise": "^0.5.3",
     "redux-thunk": "^2.2.0",
     "style-loader": "^0.19.0"
