--- a/client/package.json
+++ b/client/package.json
@@ -6,9 +6,6 @@
     "/auth/google": {
       "target": "http://localhost:5000"
     },
-    "/auth/facebook": {
-      "target": "http://localhost:5000"
-    },
     "/api/*": {
       "target": "http://localhost:5000"
     }
@@ -19,22 +16,20 @@
     "create-react-app": "^1.4.3",
     "css-loader": "^0.28.7",
     "materialize-css": "^0.100.2",
+    "moment": "^2.20.1",
     "prop-types": "^15.6.0",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
-    "react-geolocated": "^2.2.1",
-    "react-geolocation": "^1.0.3",
-    "react-google-maps": "^9.4.1",
     "react-modal": "^3.1.5",
     "react-places-autocomplete": "^5.4.3",
     "react-redux": "^5.0.6",
-    "react-router": "^2.0.1",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
+    "react-widgets": "^4.2.0",
+    "react-widgets-moment": "^4.0.7",
     "recompose": "^0.26.0",
     "redux": "^3.7.2",
     "redux-form": "^7.2.3",
-    "redux-promise": "^0.5.3",
     "redux-thunk": "^2.2.0",
     "style-loader": "^0.19.0"
   },
