--- a/package.json
+++ b/package.json
@@ -24,17 +24,15 @@
     "cookie-session": "^2.0.0-beta.3",
     "cors": "^2.8.4",
     "express": "^4.16.2",
-    "facebook-events-by-location-core": "^0.7.0",
     "jwt-simple": "^0.5.1",
+    "mongodb": "^3.0.2",
     "mongoose": "^4.13.11",
     "morgan": "^1.9.0",
     "nodemon": "^1.14.12",
     "passport": "^0.4.0",
-    "passport-facebook": "^2.1.1",
     "passport-google": "^0.3.0",
     "passport-google-oauth20": "^1.0.0",
     "passport-jwt": "^3.0.1",
-    "passport-local": "^1.0.0",
-    "yelp-fusion": "^1.0.4"
+    "passport-local": "^1.0.0"
   }
 }
